# qlm

./: README.md  env.example  pyproject.toml  quicklead.db  test_api.py
app/: __init__.py  auth.py  celery_app.py  cli.py  config.py  crud.py  database.py  init_db.py  main.py  notifications.py  start.py  tasks.py
app/api/: auth.py  external.py  leads.py  projects.py  users.py
app/models/: __init__.py  enums.py  lead.py  project.py  user.py  webhook.py
app/repositories/: __init__.py  lead_repository.py  project_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  base.py  leads.py  projects.py  users.py  webhooks.py
app/services/: __init__.py  lead_service.py  project_service.py  user_service.py
